--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -904,6 +904,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -4352,20 +4361,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# count=0\n",
-    "# for i in range(41):\n",
-    "#     if(rf_predictions[i]-original[i]!=0):\n",
-    "#         count+=1\n",
-    "\n",
-    "# rf_Test_accuracy=(42-count)/42*100"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4469,37 +4464,6 @@
    ],
    "source": [
     "disease_classes[31]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# new_df = encode_symptoms(df_1, df_4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# separating the data and labels\n",
-    "X = new_df.drop(columns='Disease', axis=1)\n",
-    "Y = new_df['Disease']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaler = StandardScaler()\n",
-    "scaler.fit(X)\n",
-    "X = scaler.transform(X)"
    ]
   },
   {
