--- a/sympt.ipynb
+++ b/sympt.ipynb
@@ -9,9 +9,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pip in c:\\program files\\windowsapps\\pythonsoftwarefoundation.python.3.11_3.11.2544.0_x64__qbz5n2kfra8p0\\lib\\site-packages (24.0)\n",
+      "Collecting pip\n",
+      "  Downloading pip-24.3.1-py3-none-any.whl.metadata (3.7 kB)\n",
+      "Downloading pip-24.3.1-py3-none-any.whl (1.8 MB)\n",
+      "   ---------------------------------------- 0.0/1.8 MB ? eta -:--:--\n",
+      "    --------------------------------------- 0.0/1.8 MB 1.3 MB/s eta 0:00:02\n",
+      "    --------------------------------------- 0.0/1.8 MB 1.3 MB/s eta 0:00:02\n",
+      "    --------------------------------------- 0.0/1.8 MB 1.3 MB/s eta 0:00:02\n",
+      "    --------------------------------------- 0.0/1.8 MB 1.3 MB/s eta 0:00:02\n",
+      "    --------------------------------------- 0.0/1.8 MB 1.3 MB/s eta 0:00:02\n",
+      "    --------------------------------------- 0.0/1.8 MB 1.3 MB/s eta 0:00:02\n",
+      "   -- ------------------------------------- 0.1/1.8 MB 327.2 kB/s eta 0:00:06\n",
+      "   -- ------------------------------------- 0.1/1.8 MB 327.2 kB/s eta 0:00:06\n",
+      "   -- ------------------------------------- 0.1/1.8 MB 327.2 kB/s eta 0:00:06\n",
+      "   -- ------------------------------------- 0.1/1.8 MB 327.2 kB/s eta 0:00:06\n",
+      "   --- ------------------------------------ 0.2/1.8 MB 317.5 kB/s eta 0:00:06\n",
+      "   ---- ----------------------------------- 0.2/1.8 MB 393.1 kB/s eta 0:00:05\n",
+      "   ----- ---------------------------------- 0.2/1.8 MB 400.1 kB/s eta 0:00:04\n",
+      "   ----- ---------------------------------- 0.3/1.8 MB 374.6 kB/s eta 0:00:05\n",
+      "   ------ --------------------------------- 0.3/1.8 MB 431.6 kB/s eta 0:00:04\n",
+      "   -------- ------------------------------- 0.4/1.8 MB 518.8 kB/s eta 0:00:03\n",
+      "   ---------- ----------------------------- 0.5/1.8 MB 591.0 kB/s eta 0:00:03\n",
+      "   ------------ --------------------------- 0.6/1.8 MB 643.0 kB/s eta 0:00:02\n",
+      "   ------------- -------------------------- 0.6/1.8 MB 701.1 kB/s eta 0:00:02\n",
+      "   --------------- ------------------------ 0.7/1.8 MB 744.1 kB/s eta 0:00:02\n",
+      "   ----------------- ---------------------- 0.8/1.8 MB 800.5 kB/s eta 0:00:02\n",
+      "   ------------------ --------------------- 0.9/1.8 MB 836.5 kB/s eta 0:00:02\n",
+      "   ------------------ --------------------- 0.9/1.8 MB 836.5 kB/s eta 0:00:02\n",
+      "   ------------------- -------------------- 0.9/1.8 MB 784.1 kB/s eta 0:00:02\n",
+      "   --------------------- ------------------ 1.0/1.8 MB 812.6 kB/s eta 0:00:02\n",
+      "   ---------------------- ----------------- 1.0/1.8 MB 834.2 kB/s eta 0:00:01\n",
+      "   ---------------------- ----------------- 1.0/1.8 MB 820.9 kB/s eta 0:00:01\n",
+      "   ----------------------- ---------------- 1.1/1.8 MB 839.3 kB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 1.2/1.8 MB 888.5 kB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 1.3/1.8 MB 888.5 kB/s eta 0:00:01\n",
+      "   ----------------------------- ---------- 1.3/1.8 MB 909.1 kB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 1.4/1.8 MB 918.6 kB/s eta 0:00:01\n",
+      "   ------------------------------- -------- 1.5/1.8 MB 923.8 kB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 1.5/1.8 MB 938.9 kB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 1.6/1.8 MB 958.5 kB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 1.7/1.8 MB 959.1 kB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 1.7/1.8 MB 971.3 kB/s eta 0:00:01\n",
+      "   -------------------------------------- - 1.7/1.8 MB 963.0 kB/s eta 0:00:01\n",
+      "   ---------------------------------------  1.8/1.8 MB 969.1 kB/s eta 0:00:01\n",
+      "   ---------------------------------------  1.8/1.8 MB 969.1 kB/s eta 0:00:01\n",
+      "   ---------------------------------------  1.8/1.8 MB 969.1 kB/s eta 0:00:01\n",
+      "   ---------------------------------------  1.8/1.8 MB 969.1 kB/s eta 0:00:01\n",
+      "   ---------------------------------------  1.8/1.8 MB 887.4 kB/s eta 0:00:01\n",
+      "   ---------------------------------------- 1.8/1.8 MB 865.3 kB/s eta 0:00:00\n",
+      "Installing collected packages: pip\n",
+      "Successfully installed pip-24.3.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install --upgrade pip"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mplotly\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexpress\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpx\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mstreamlit\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mst\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -4676,7 +4756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4
  },
